# holmesgpt-ag-ui-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
holmesgpt_ag_ui_bridge/: __init__.py  agui.py  app.py  config.py  holmes.py  main.py  openai_adapter.py  openai_apps.py
tests/: test_agui_conversion.py  test_app.py  test_openai_adapter.py  test_openai_apps.py
